--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "element-ui": "^2.4.11",
+    "fs": "0.0.1-security",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "nuxt": "^2.0.0",
